--- a/task3/index.html
+++ b/task3/index.html
@@ -204,7 +204,7 @@
 			</div>
 			
 		</div>	
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdHbeIVMWS8O8PhhRfyEhHcrpDysh9W_2tGkHhUij5H6MaO7A/viewform?embedded=true" width="640" height="1130" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>	
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdHbeIVMWS8O8PhhRfyEhHcrpDysh9W_2tGkHhUij5H6MaO7A/viewform?embedded=true" width="100%" height="1250" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>	
 	</section>
 	<!--contact section ends-->
 	<!--Map section start-->
